--- a/multipleProducts.html
+++ b/multipleProducts.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Single Product</title>
+    <title>Multiple Product</title>
     <link rel="stylesheet" type="text/css" href="home.css">
 </head>
 <body>
@@ -38,7 +38,55 @@
             </div>
         </div>
 
-        <div class="littlebar"></div>
+        <div class="littlebar">
+            <div class="little-inner">
+                <p>Electronics</p>
+            </div>
+            <div class="little-inner">
+                <p>TV's & Appliances</p>
+            </div>
+            <div class="little-inner">
+                <p>Men</p>
+            </div>
+            <div class="little-inner">
+                <p>Women</p>
+            </div>
+            <div class="little-inner">
+                <p>Baby & Kids</p>
+            </div>
+            <div class="little-inner">
+                <p>Home & Furniture</p>
+            </div>
+            <div class="little-inner">
+                <p>Sports & Books</p>
+            </div>
+            <div class="little-inner">
+                <p>Flights</p>
+            </div>
+            <div class="little-inner">
+                <p>Offer Zone</p>
+            </div>
+            <div class="little-inner">
+                <p>Grocery</p>
+            </div>
+        </div>
+
+        <div class="main-cont">
+            <div class="content-left">
+                <div class="filters"></div>
+                <div class="filter-cat"></div>
+                <div class="filter-cat"></div>
+                <div class="filter-cat"></div>
+                <div class="filter-cat"></div>
+                <div class="filter-cat"></div>
+                <div class="filter-cat"></div>
+                <div class="filter-cat"></div>
+                <div class="filter-cat"></div>
+            </div>
+            <div class="content-right"></div>
+        </div>
+
+        <div class="footer"></div>
 
     </div>
 
