--- a/multipleProducts.html
+++ b/multipleProducts.html
@@ -73,20 +73,77 @@
 
         <div class="main-cont">
             <div class="content-left">
-                <div class="filters"></div>
-                <div class="filter-cat"></div>
-                <div class="filter-cat"></div>
-                <div class="filter-cat"></div>
-                <div class="filter-cat"></div>
-                <div class="filter-cat"></div>
-                <div class="filter-cat"></div>
-                <div class="filter-cat"></div>
-                <div class="filter-cat"></div>
+                <div class="filter-cat">
+                    <h2>Filters</h2>
+                </div>
+                <div class="filter-cat">
+                    <p>Brand</p>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#322f2f" viewBox="0 0 256 256"><path d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"></path></svg>
+                </div>
+                <div class="filter-cat">
+                    <p>Display Size</p>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#322f2f" viewBox="0 0 256 256"><path d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"></path></svg>
+                </div>
+                <div class="filter-cat">
+                    <p>Gst Invoice Available</p>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#322f2f" viewBox="0 0 256 256"><path d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"></path></svg>
+                </div>
+                <div class="filter-cat">
+                    <p>Connectivity</p>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#322f2f" viewBox="0 0 256 256"><path d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"></path></svg>
+                </div>
+                <div class="filter-cat">
+                    <p>Ram</p>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#322f2f" viewBox="0 0 256 256"><path d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"></path></svg>
+                </div>
+                <div class="filter-cat">
+                    <p>Customer Ratings</p>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#322f2f" viewBox="0 0 256 256"><path d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"></path></svg>
+                </div>
+                <div class="filter-cat">
+                    <p>Internal Storage</p>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#322f2f" viewBox="0 0 256 256"><path d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"></path></svg>
+                </div>
+                <div class="filter-cat">
+                    <p>Operating System</p>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#322f2f" viewBox="0 0 256 256"><path d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"></path></svg>
+                </div>
             </div>
-            <div class="content-right"></div>
+            <div id="replace-product" class="content-right">
+                <!-- <div class="right-inner">
+                    <div class="product-image">
+                        <img src="https://rukminim1.flixcart.com/image/312/312/ktop5e80/tablet/6/o/s/mk2p3hn-a-apple-original-imag6yy8deumbvxz.jpeg?q=70" alt="" />
+                    </div>
+                    <div class="product-desc">
+                        <h3>APPLE iPad (9th Gen) 64 GB ROM 10.2 inch with Wi-Fi Only (Silver)</h3>
+                        <div class="rating">
+                            <p>4.6</p>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#ffffff" viewBox="0 0 256 256"><path d="M239.2,97.29a16,16,0,0,0-13.81-11L166,81.17,142.72,25.81h0a15.95,15.95,0,0,0-29.44,0L90.07,81.17,30.61,86.32a16,16,0,0,0-9.11,28.06L66.61,153.8,53.09,212.34a16,16,0,0,0,23.84,17.34l51-31,51.11,31a16,16,0,0,0,23.84-17.34l-13.51-58.6,45.1-39.36A16,16,0,0,0,239.2,97.29Zm-15.22,5-45.1,39.36a16,16,0,0,0-5.08,15.71L187.35,216v0l-51.07-31a15.9,15.9,0,0,0-16.54,0l-51,31h0L82.2,157.4a16,16,0,0,0-5.08-15.71L32,102.35a.37.37,0,0,1,0-.09l59.44-5.14a16,16,0,0,0,13.35-9.75L128,32.08l23.2,55.29a16,16,0,0,0,13.35,9.75L224,102.26S224,102.32,224,102.33Z"></path></svg>
+                        </div>
+                        <div class="list">
+                            <ul>
+                                <li>64 GB ROM</li>
+                                <li>25.91 cm (10.2 inch) Display</li>
+                                <li>8 MP Primary Camera | 12 MP Front</li>
+                                <li>iOS 15 | Battery: Lithium Polymer</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="product-price">
+                        <h3>₹33,900/-</h3>
+                        <p>Delivery by <b>2 PM, Tomorrow</b></p>
+                        <span>No Cost EMI from ₹5,150/month</span>
+                    </div>
+                    <div class="flip-assured">
+                        <img src="https://static-assets-web.flixcart.com/fk-p-linchpin-web/fk-cp-zion/img/fa_62673a.png" alt="" />
+                    </div>
+                </div> -->
+            </div>
         </div>
 
-        <div class="footer"></div>
+        <div class="footer">
+            <img src="footer.png" alt="" />
+        </div>
 
     </div>
 
@@ -137,6 +194,43 @@
                 var loginStructure = `<button onclick='redirectLogin()'>Login</button>`;
                 callLogin.innerHTML = loginStructure;
             }
+
+            //replace-product
+            var divToAppendAppleProduct = document.getElementById("replace-product");
+            var appleProducts = JSON.parse(localStorage.getItem("apple_products"));
+            var appleString = "";
+            for(var i=0;i<appleProducts.length;i++){
+                appleString += `<div class="right-inner">
+                    <div class="product-image">
+                        <img src="${appleProducts[i].a_img}" alt="" />
+                    </div>
+                    <div class="product-desc">
+                        <h3>${appleProducts[i].a_name}</h3>
+                        <div class="rating">
+                            <p>4.6</p>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#ffffff" viewBox="0 0 256 256"><path d="M239.2,97.29a16,16,0,0,0-13.81-11L166,81.17,142.72,25.81h0a15.95,15.95,0,0,0-29.44,0L90.07,81.17,30.61,86.32a16,16,0,0,0-9.11,28.06L66.61,153.8,53.09,212.34a16,16,0,0,0,23.84,17.34l51-31,51.11,31a16,16,0,0,0,23.84-17.34l-13.51-58.6,45.1-39.36A16,16,0,0,0,239.2,97.29Zm-15.22,5-45.1,39.36a16,16,0,0,0-5.08,15.71L187.35,216v0l-51.07-31a15.9,15.9,0,0,0-16.54,0l-51,31h0L82.2,157.4a16,16,0,0,0-5.08-15.71L32,102.35a.37.37,0,0,1,0-.09l59.44-5.14a16,16,0,0,0,13.35-9.75L128,32.08l23.2,55.29a16,16,0,0,0,13.35,9.75L224,102.26S224,102.32,224,102.33Z"></path></svg>
+                        </div>
+                        <div class="list">
+                            <ul>
+                                <li>64 GB ROM</li>
+                                <li>25.91 cm (10.2 inch) Display</li>
+                                <li>8 MP Primary Camera | 12 MP Front</li>
+                                <li>iOS 15 | Battery: Lithium Polymer</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="product-price">
+                        <h3>${appleProducts[i].a_price}</h3>
+                        <p>Delivery by <b>2 PM, Tomorrow</b></p>
+                        <span>No Cost EMI from ₹5,150/month</span>
+                    </div>
+                    <div class="flip-assured">
+                        <img src="https://static-assets-web.flixcart.com/fk-p-linchpin-web/fk-cp-zion/img/fa_62673a.png" alt="" />
+                    </div>
+                </div>`;
+            }
+            divToAppendAppleProduct.innerHTML = appleString;
+
 
         }
 
