--- a/singleProduct.html
+++ b/singleProduct.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="home.css">
 </head>
 <body>
-    <div id="screen">
+    <div id="screen1">
         <div class="navbar">
             <div class="inner-nav">
                 <div class="flipkart-logo">
@@ -38,8 +38,8 @@
             </div>
         </div>
 
-        <div class="cart-content">
-            <div class="cart-left">
+        <div id="replace-product" class="cart-content">
+            <!-- <div class="cart-left">
                 <div class="cart-left-left">
                     <div class="c-l-l-image">
                         <img src="" alt="" />
@@ -54,9 +54,49 @@
                         <img src="" alt="" />
                     </div>
                 </div>
-                <div class="cart-left-right"></div>
+                <div class="cart-left-right">
+                    <div class="c-l-r-image">
+                        <img src="" alt="" />
+                    </div>
+                    <div class="cartButton">
+                        <button>Add To Cart</button>
+                        <button>Buy Now</button>
+                    </div>
+                </div>
             </div>
-            <div class="cart-right"></div>
+            <div class="cart-right">
+                <div class="right-title">
+                    <p>APPLE iPad Pro (4th Gen) 128 GB ROM 11.0 inch with Wi-Fi Only (Space Grey)</p>
+                </div>
+                <div class="right-rating">
+                    <div class="rating-section">
+                        <p>4.6</p>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#ffffff" viewBox="0 0 256 256"><path d="M239.2,97.29a16,16,0,0,0-13.81-11L166,81.17,142.72,25.81h0a15.95,15.95,0,0,0-29.44,0L90.07,81.17,30.61,86.32a16,16,0,0,0-9.11,28.06L66.61,153.8,53.09,212.34a16,16,0,0,0,23.84,17.34l51-31,51.11,31a16,16,0,0,0,23.84-17.34l-13.51-58.6,45.1-39.36A16,16,0,0,0,239.2,97.29Zm-15.22,5-45.1,39.36a16,16,0,0,0-5.08,15.71L187.35,216v0l-51.07-31a15.9,15.9,0,0,0-16.54,0l-51,31h0L82.2,157.4a16,16,0,0,0-5.08-15.71L32,102.35a.37.37,0,0,1,0-.09l59.44-5.14a16,16,0,0,0,13.35-9.75L128,32.08l23.2,55.29a16,16,0,0,0,13.35,9.75L224,102.26S224,102.32,224,102.33Z"></path></svg>
+                    </div>
+                    <div class="review-count">
+                        <p>123 Ratings and 13 Reviews</p>
+                    </div>
+                    <div class="flip-assured-rating">
+                        <img src="https://static-assets-web.flixcart.com/fk-p-linchpin-web/fk-cp-zion/img/fa_62673a.png" alt="" />
+                    </div>
+                </div>
+                <div class="right-price">
+                    <h1>₹78,670</h1>
+                    <p><s>₹81,900</s></p>
+                    <p>3% off</p>
+                </div>
+                <div class="right-offers">
+                    <h4>Available Offers</h4>
+                    <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#38be13" viewBox="0 0 256 256"><path d="M243.31,136,144,36.69A15.86,15.86,0,0,0,132.69,32H40a8,8,0,0,0-8,8v92.69A15.86,15.86,0,0,0,36.69,144L136,243.31a16,16,0,0,0,22.63,0l84.68-84.68a16,16,0,0,0,0-22.63ZM84,96A12,12,0,1,1,96,84,12,12,0,0,1,84,96Z"></path></svg>Bank OfferFlat ₹1250 Discount on HDFC Bank Credit Card EMI Transactions on orders of ₹15,000 and aboveT&C</p>
+                    <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#38be13" viewBox="0 0 256 256"><path d="M243.31,136,144,36.69A15.86,15.86,0,0,0,132.69,32H40a8,8,0,0,0-8,8v92.69A15.86,15.86,0,0,0,36.69,144L136,243.31a16,16,0,0,0,22.63,0l84.68-84.68a16,16,0,0,0,0-22.63ZM84,96A12,12,0,1,1,96,84,12,12,0,0,1,84,96Z"></path></svg>Bank Offer10% off on AU Bank Credit Card Transactions, up to ₹1,000. On orders of ₹10,000 and aboveT&C</p>
+                    <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#38be13" viewBox="0 0 256 256"><path d="M243.31,136,144,36.69A15.86,15.86,0,0,0,132.69,32H40a8,8,0,0,0-8,8v92.69A15.86,15.86,0,0,0,36.69,144L136,243.31a16,16,0,0,0,22.63,0l84.68-84.68a16,16,0,0,0,0-22.63ZM84,96A12,12,0,1,1,96,84,12,12,0,0,1,84,96Z"></path></svg>Bank OfferFlat ₹4000 Discount on HDFC Bank Credit Card EMI Transactions on orders of ₹50,000 and aboveT&C</p>
+                    <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#38be13" viewBox="0 0 256 256"><path d="M243.31,136,144,36.69A15.86,15.86,0,0,0,132.69,32H40a8,8,0,0,0-8,8v92.69A15.86,15.86,0,0,0,36.69,144L136,243.31a16,16,0,0,0,22.63,0l84.68-84.68a16,16,0,0,0,0-22.63ZM84,96A12,12,0,1,1,96,84,12,12,0,0,1,84,96Z"></path></svg>Special PriceGet extra ₹3230 off (price inclusive of cashback/coupon)T&C</p>
+                    <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#38be13" viewBox="0 0 256 256"><path d="M243.31,136,144,36.69A15.86,15.86,0,0,0,132.69,32H40a8,8,0,0,0-8,8v92.69A15.86,15.86,0,0,0,36.69,144L136,243.31a16,16,0,0,0,22.63,0l84.68-84.68a16,16,0,0,0,0-22.63ZM84,96A12,12,0,1,1,96,84,12,12,0,0,1,84,96Z"></path></svg>Bank Offer10% off on IndusInd Bank Credit Card EMI Transactions, up to ₹1,500 on orders of ₹7,500 and aboveT&C</p>
+                    <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#38be13" viewBox="0 0 256 256"><path d="M243.31,136,144,36.69A15.86,15.86,0,0,0,132.69,32H40a8,8,0,0,0-8,8v92.69A15.86,15.86,0,0,0,36.69,144L136,243.31a16,16,0,0,0,22.63,0l84.68-84.68a16,16,0,0,0,0-22.63ZM84,96A12,12,0,1,1,96,84,12,12,0,0,1,84,96Z"></path></svg>Bank Offer5% Cashback on Flipkart Axis Bank CardT&C</p>
+                    <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#38be13" viewBox="0 0 256 256"><path d="M243.31,136,144,36.69A15.86,15.86,0,0,0,132.69,32H40a8,8,0,0,0-8,8v92.69A15.86,15.86,0,0,0,36.69,144L136,243.31a16,16,0,0,0,22.63,0l84.68-84.68a16,16,0,0,0,0-22.63ZM84,96A12,12,0,1,1,96,84,12,12,0,0,1,84,96Z"></path></svg>Bank Offer₹3000 Instant CashBack on HDFC Credit Card Full Swipe Transactions on orders above ₹7000T&C</p> 
+                    <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#38be13" viewBox="0 0 256 256"><path d="M243.31,136,144,36.69A15.86,15.86,0,0,0,132.69,32H40a8,8,0,0,0-8,8v92.69A15.86,15.86,0,0,0,36.69,144L136,243.31a16,16,0,0,0,22.63,0l84.68-84.68a16,16,0,0,0,0-22.63ZM84,96A12,12,0,1,1,96,84,12,12,0,0,1,84,96Z"></path></svg>Partner OfferSign up for Flipkart Pay Later and get Flipkart Gift Card worth up to ₹500*Know More</p>
+                </div>
+            </div> -->
         </div>
 
         <div class="footer">
@@ -82,7 +122,7 @@
                     <div class="more">
                         <p>More</p>
                     </div>
-                    <div class="cart">
+                    <div onclick='redirectToCart()' class="cart">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ffffff" viewBox="0 0 256 256"><path d="M96,216a16,16,0,1,1-16-16A16,16,0,0,1,96,216Zm88-16a16,16,0,1,0,16,16A16,16,0,0,0,184,200ZM231.65,74.35l-28.53,92.71A23.89,23.89,0,0,1,180.18,184H84.07A24.11,24.11,0,0,1,61,166.59L24.82,40H8A8,8,0,0,1,8,24H24.82A16.08,16.08,0,0,1,40.21,35.6L48.32,64H224a8,8,0,0,1,7.65,10.35ZM213.17,80H52.89l23.49,82.2a8,8,0,0,0,7.69,5.8h96.11a8,8,0,0,0,7.65-5.65Z"></path></svg>
                         <p>cart</p>
                     </div>
@@ -111,6 +151,71 @@
                 var loginStructure = `<button onclick='redirectLogin()'>Login</button>`;
                 callLogin.innerHTML = loginStructure;
             }
+
+            //add current product to page
+
+            var apple_currentProduct = JSON.parse(localStorage.getItem("apple_current_product"));
+            var divToAppendCurrentAppleProduct = document.getElementById("replace-product");
+            var appleProductStructure = `<div class="cart-left">
+                <div class="cart-left-left">
+                    <div class="c-l-l-image">
+                        <img src="${apple_currentProduct.a_img}" alt="" />
+                    </div>
+                    <div class="c-l-l-image">
+                        <img src="${apple_currentProduct.a_img}" alt="" />
+                    </div>
+                    <div class="c-l-l-image">
+                        <img src="${apple_currentProduct.a_img}" alt="" />
+                    </div>
+                    <div class="c-l-l-image">
+                        <img src="${apple_currentProduct.a_img}" alt="" />
+                    </div>
+                </div>
+                <div class="cart-left-right">
+                    <div class="c-l-r-image">
+                        <img src="${apple_currentProduct.a_img}" alt="" />
+                    </div>
+                    <div class="cartButton">
+                        <button onclick='addToCart(${JSON.stringify(apple_currentProduct)})'>Add To Cart</button>
+                        <button>Buy Now</button>
+                    </div>
+                </div>
+            </div>
+            <div class="cart-right">
+                <div class="right-title">
+                    <p>${apple_currentProduct.a_name}</p>
+                </div>
+                <div class="right-rating">
+                    <div class="rating-section">
+                        <p>4.6</p>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#ffffff" viewBox="0 0 256 256"><path d="M239.2,97.29a16,16,0,0,0-13.81-11L166,81.17,142.72,25.81h0a15.95,15.95,0,0,0-29.44,0L90.07,81.17,30.61,86.32a16,16,0,0,0-9.11,28.06L66.61,153.8,53.09,212.34a16,16,0,0,0,23.84,17.34l51-31,51.11,31a16,16,0,0,0,23.84-17.34l-13.51-58.6,45.1-39.36A16,16,0,0,0,239.2,97.29Zm-15.22,5-45.1,39.36a16,16,0,0,0-5.08,15.71L187.35,216v0l-51.07-31a15.9,15.9,0,0,0-16.54,0l-51,31h0L82.2,157.4a16,16,0,0,0-5.08-15.71L32,102.35a.37.37,0,0,1,0-.09l59.44-5.14a16,16,0,0,0,13.35-9.75L128,32.08l23.2,55.29a16,16,0,0,0,13.35,9.75L224,102.26S224,102.32,224,102.33Z"></path></svg>
+                    </div>
+                    <div class="review-count">
+                        <p>123 Ratings and 13 Reviews</p>
+                    </div>
+                    <div class="flip-assured-rating">
+                        <img src="https://static-assets-web.flixcart.com/fk-p-linchpin-web/fk-cp-zion/img/fa_62673a.png" alt="" />
+                    </div>
+                </div>
+                <div class="right-price">
+                    <h1>₹${apple_currentProduct.a_price}</h1>
+                    <p><s>₹81,900</s></p>
+                    <p>3% off</p>
+                </div>
+                <div class="right-offers">
+                    <h4>Available Offers</h4>
+                    <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#38be13" viewBox="0 0 256 256"><path d="M243.31,136,144,36.69A15.86,15.86,0,0,0,132.69,32H40a8,8,0,0,0-8,8v92.69A15.86,15.86,0,0,0,36.69,144L136,243.31a16,16,0,0,0,22.63,0l84.68-84.68a16,16,0,0,0,0-22.63ZM84,96A12,12,0,1,1,96,84,12,12,0,0,1,84,96Z"></path></svg>Bank OfferFlat ₹1250 Discount on HDFC Bank Credit Card EMI Transactions on orders of ₹15,000 and aboveT&C</p>
+                    <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#38be13" viewBox="0 0 256 256"><path d="M243.31,136,144,36.69A15.86,15.86,0,0,0,132.69,32H40a8,8,0,0,0-8,8v92.69A15.86,15.86,0,0,0,36.69,144L136,243.31a16,16,0,0,0,22.63,0l84.68-84.68a16,16,0,0,0,0-22.63ZM84,96A12,12,0,1,1,96,84,12,12,0,0,1,84,96Z"></path></svg>Bank Offer10% off on AU Bank Credit Card Transactions, up to ₹1,000. On orders of ₹10,000 and aboveT&C</p>
+                    <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#38be13" viewBox="0 0 256 256"><path d="M243.31,136,144,36.69A15.86,15.86,0,0,0,132.69,32H40a8,8,0,0,0-8,8v92.69A15.86,15.86,0,0,0,36.69,144L136,243.31a16,16,0,0,0,22.63,0l84.68-84.68a16,16,0,0,0,0-22.63ZM84,96A12,12,0,1,1,96,84,12,12,0,0,1,84,96Z"></path></svg>Bank OfferFlat ₹4000 Discount on HDFC Bank Credit Card EMI Transactions on orders of ₹50,000 and aboveT&C</p>
+                    <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#38be13" viewBox="0 0 256 256"><path d="M243.31,136,144,36.69A15.86,15.86,0,0,0,132.69,32H40a8,8,0,0,0-8,8v92.69A15.86,15.86,0,0,0,36.69,144L136,243.31a16,16,0,0,0,22.63,0l84.68-84.68a16,16,0,0,0,0-22.63ZM84,96A12,12,0,1,1,96,84,12,12,0,0,1,84,96Z"></path></svg>Special PriceGet extra ₹3230 off (price inclusive of cashback/coupon)T&C</p>
+                    <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#38be13" viewBox="0 0 256 256"><path d="M243.31,136,144,36.69A15.86,15.86,0,0,0,132.69,32H40a8,8,0,0,0-8,8v92.69A15.86,15.86,0,0,0,36.69,144L136,243.31a16,16,0,0,0,22.63,0l84.68-84.68a16,16,0,0,0,0-22.63ZM84,96A12,12,0,1,1,96,84,12,12,0,0,1,84,96Z"></path></svg>Bank Offer10% off on IndusInd Bank Credit Card EMI Transactions, up to ₹1,500 on orders of ₹7,500 and aboveT&C</p>
+                    <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#38be13" viewBox="0 0 256 256"><path d="M243.31,136,144,36.69A15.86,15.86,0,0,0,132.69,32H40a8,8,0,0,0-8,8v92.69A15.86,15.86,0,0,0,36.69,144L136,243.31a16,16,0,0,0,22.63,0l84.68-84.68a16,16,0,0,0,0-22.63ZM84,96A12,12,0,1,1,96,84,12,12,0,0,1,84,96Z"></path></svg>Bank Offer5% Cashback on Flipkart Axis Bank CardT&C</p>
+                    <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#38be13" viewBox="0 0 256 256"><path d="M243.31,136,144,36.69A15.86,15.86,0,0,0,132.69,32H40a8,8,0,0,0-8,8v92.69A15.86,15.86,0,0,0,36.69,144L136,243.31a16,16,0,0,0,22.63,0l84.68-84.68a16,16,0,0,0,0-22.63ZM84,96A12,12,0,1,1,96,84,12,12,0,0,1,84,96Z"></path></svg>Bank Offer₹3000 Instant CashBack on HDFC Credit Card Full Swipe Transactions on orders above ₹7000T&C</p> 
+                    <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#38be13" viewBox="0 0 256 256"><path d="M243.31,136,144,36.69A15.86,15.86,0,0,0,132.69,32H40a8,8,0,0,0-8,8v92.69A15.86,15.86,0,0,0,36.69,144L136,243.31a16,16,0,0,0,22.63,0l84.68-84.68a16,16,0,0,0,0-22.63ZM84,96A12,12,0,1,1,96,84,12,12,0,0,1,84,96Z"></path></svg>Partner OfferSign up for Flipkart Pay Later and get Flipkart Gift Card worth up to ₹500*Know More</p>
+                </div>
+            </div>`;
+
+            divToAppendCurrentAppleProduct.innerHTML = appleProductStructure;
         }
 
         function logout(){
@@ -118,8 +223,31 @@
             window.location.href = `./login.html`;
         }
 
+        function redirectToCart(){
+            window.location.href = `./cart.html`;
+        }
+
         function redirectLogin(){
             window.location.href = `./login.html`;
+        }
+
+        function addToCart(apple_product){
+            var flipkart_currentUser = JSON.parse(localStorage.getItem("flipkart_current_user"));
+            var flipkart_userData = JSON.parse(localStorage.getItem("flipkart_users"));
+            
+
+            for(var i=0;i<flipkart_userData.length;i++){
+                if(flipkart_currentUser.userEmail == flipkart_userData[i].userEmail){
+                    if(flipkart_userData[i].cart == undefined){
+                        flipkart_userData[i].cart = [apple_product];
+                    } else {
+                        flipkart_userData[i].cart.push(apple_product);
+                    }
+                    alert("Product Added To Cart");
+                }
+            }
+
+            localStorage.setItem("flipkart_users", JSON.stringify(flipkart_userData));
         }
 
     </script>
