--- a/cart.html
+++ b/cart.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Cart</title>
     <link rel="stylesheet" type="text/css" href="home.css">
 </head>
 <body>
-    <div id="screen">
+    <div id="screen3">
         <div class="navbar">
             <div class="inner-nav">
                 <div class="flipkart-logo">
@@ -38,26 +38,48 @@
             </div>
         </div>
 
-        <div id="replace-category" class="category"></div>
-
-        <div class="main-slider">
-            <img src="https://rukminim1.flixcart.com/fk-p-flap/1688/280/image/af9ad775e5ad6f8b.jpg?q=50" alt="" />
-        </div>
-
-        <div id="replace-items-1" class="main-items-1"></div>
-
-        <div id="replace-items-2" class="main-items-2"></div>
-
-        <div class="footer">
-            <img src="footer.png" alt="" />
+        <div class="main-cont-cart">
+            <div class="left-content">
+                <div class="lc-delivery">
+                    <p>Deliver To: <b>Navi Mumbai - 400703</b></p>
+                    <button>Change</button>
+                </div>
+                <div id="replace-cartProduct" class="lc-cart">
+                    <div  class="inner-cprod">
+                        <div class="cprod-image">
+                            <img src="" alt="" />
+                        </div>
+                        <div class="cprod-name">
+                            <h3>Apple iPad Pro 11.0 inch Wi-Fi Only</h3>
+                            <p>Delivery by 2PM, Tomorrow</p>
+                        </div>
+                        <div class="cprod-price">
+                            <p>₹78,670</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="replace-bill" class="right-content">
+                <div class="rc-title">
+                    <h3>Price Details</h3>
+                </div>
+                <div class="rc-bill">
+                    <p>Price(1 item)</p>
+                    <p>₹81,900</p>
+                </div>
+                <div class="rc-finalAmount">
+                    <h3>Total Amount</h3>
+                    <h2>₹78,670</h2>
+                </div>
+            </div>
         </div>
 
     </div>
 
+
     <script>
 
-        window.onload = () =>{
-
+        window.onload = () => {
             var flipkart_currentUser = JSON.parse(localStorage.getItem("flipkart_current_user"));
 
             if(!!flipkart_currentUser){
@@ -104,92 +126,61 @@
             }
 
 
+            var f_currentUser = JSON.parse(localStorage.getItem("flipkart_current_user"));
+            var f_userData = JSON.parse(localStorage.getItem("flipkart_users"));
 
-            //category section fetched
-            var divToAppendCategory = document.getElementById("replace-category");
-            var categoryStorage = JSON.parse(localStorage.getItem("category_list"));
-            var categoryString = "";
-            for(var i=0;i<categoryStorage.length;i++){
-                categoryString += `<div class="inner-cat">
-                <div class="inner-image">
-                    <img src="${categoryStorage[i].c_link}" alt="" />
-                </div>
-                <div class="inner-text">
-                    <p>${categoryStorage[i].c_name}</p>
-                </div>
-            </div>`;
-            }
-            divToAppendCategory.innerHTML = categoryString;
+            var divToAppendCartProducts = document.getElementById("replace-cartProduct");
 
+            var products;
 
-
-            //top products fetched
-            var divToAppendTopProduct = document.getElementById("replace-items-1");
-            var firstStructure = `<div class="inner-section">
-                <div class="section-top">
-                    <h2>Top Deals</h2>
-                    <div class="view-button">
-                        <button>View All</button>
-                    </div>
-                </div>
-                <div class="section-bot">
-                    <img src="Top deals.JPG" alt="" />
-                </div>
-            </div>`;
-
-            divToAppendTopProduct.innerHTML = firstStructure;
-
-            var topProductStorage = JSON.parse(localStorage.getItem("product_list_1"));
-            var topProductString = "";
-            for(var i=0;i<topProductStorage.length;i++){
-                topProductString += `<div onclick='redirectPage()' class="inner-items">
-                <div class="items-top">
-                    <img src="${topProductStorage[i].p_img}" alt="" />
-                </div>
-                <div class="items-bot">
-                    <h4>${topProductStorage[i].p_name}</h4>
-                    <p>${topProductStorage[i].p_price}</p>
-                    <span>${topProductStorage[i].p_desc}</span>
-                </div>
-            </div>`;
+            for(var i=0;i<f_userData.length;i++){
+                if(f_currentUser.userEmail == f_userData[i].userEmail){
+                    products = f_userData[i].cart;
+                }
             }
 
-            divToAppendTopProduct.innerHTML += topProductString;
+            var finalData = "";
 
-
-
-            //Books section fetched
-            var divToAppendBookProduct = document.getElementById("replace-items-2");
-            var firstBookStructure = `<div class="inner-section">
-                <div class="section-top">
-                    <h2>Books, Toys & More</h2>
-                    <div class="view-button">
-                        <button>View All</button>
-                    </div>
-                </div>
-                <div class="section-bot">
-                    <img src="Top deals.JPG" alt="" />
-                </div>
-            </div>`;
-
-            divToAppendBookProduct.innerHTML = firstBookStructure;
-
-            var bookProductStorage = JSON.parse(localStorage.getItem("product_list_2"));
-            var bookProductString = "";
-            for(var i=0;i<bookProductStorage.length;i++){
-                bookProductString += `<div class="inner-items">
-                <div class="items-top">
-                    <img src="${bookProductStorage[i].p_img}" alt="" />
-                </div>
-                <div class="items-bot">
-                    <h4>${bookProductStorage[i].p_name}</h4>
-                    <p>${bookProductStorage[i].p_price}</p>
-                    <span>${bookProductStorage[i].p_desc}</span>
-                </div>
-            </div>`;
+            for(var i=0;i<products.length;i++){
+                finalData += `<div  class="inner-cprod">
+                        <div class="cprod-image">
+                            <img src="${products[i].a_img}" alt="" />
+                        </div>
+                        <div class="cprod-name">
+                            <h3>${products[i].a_name}</h3>
+                            <p>Delivery by 2PM, Tomorrow</p>
+                        </div>
+                        <div class="cprod-price">
+                            <p>₹${products[i].a_price}</p>
+                        </div>
+                    </div>`;
             }
 
-            divToAppendBookProduct.innerHTML += bookProductString;
+            divToAppendCartProducts.innerHTML = finalData;
+
+
+            //bill Structure
+            var sumToAddProducts = 0;
+            var count = products.length;
+            for(var i=0;i<products.length;i++){
+                sumToAddProducts += parseInt(products[i].a_price);
+            }
+
+            var divToReplaceBill = document.getElementById("replace-bill");
+            var billStructure = `<div class="rc-title">
+                    <h3>Price Details</h3>
+                </div>
+                <div class="rc-bill">
+                    <p>Price(${count} items)</p>
+                    <p>₹${sumToAddProducts}</p>
+                </div>
+                <div class="rc-finalAmount">
+                    <h3>Total Amount</h3>
+                    <h2>₹${sumToAddProducts}</h2>
+                </div>`;
+
+            divToReplaceBill.innerHTML = billStructure;
+
         }
 
         function logout(){
@@ -197,18 +188,13 @@
             window.location.href = `./login.html`;
         }
 
-        function redirectLogin(){
-            window.location.href = `./login.html`;
-        }
-
-        function redirectPage(){
-            window.location.href = `./multipleProducts.html`;
-        }
-
         function redirectToCart(){
             window.location.href = `./cart.html`;
         }
 
+        function redirectLogin(){
+            window.location.href = `./login.html`;
+        }
 
     </script>
 </body>
