--- a/multipleProducts.html
+++ b/multipleProducts.html
@@ -165,7 +165,7 @@
                     <div class="more">
                         <p>More</p>
                     </div>
-                    <div class="cart">
+                    <div onclick='redirectToCart()' class="cart">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ffffff" viewBox="0 0 256 256"><path d="M96,216a16,16,0,1,1-16-16A16,16,0,0,1,96,216Zm88-16a16,16,0,1,0,16,16A16,16,0,0,0,184,200ZM231.65,74.35l-28.53,92.71A23.89,23.89,0,0,1,180.18,184H84.07A24.11,24.11,0,0,1,61,166.59L24.82,40H8A8,8,0,0,1,8,24H24.82A16.08,16.08,0,0,1,40.21,35.6L48.32,64H224a8,8,0,0,1,7.65,10.35ZM213.17,80H52.89l23.49,82.2a8,8,0,0,0,7.69,5.8h96.11a8,8,0,0,0,7.65-5.65Z"></path></svg>
                         <p>cart</p>
                     </div>
@@ -200,7 +200,7 @@
             var appleProducts = JSON.parse(localStorage.getItem("apple_products"));
             var appleString = "";
             for(var i=0;i<appleProducts.length;i++){
-                appleString += `<div class="right-inner">
+                appleString += `<div onclick='redirectToSinglePage(${JSON.stringify(appleProducts[i])})' class="right-inner">
                     <div class="product-image">
                         <img src="${appleProducts[i].a_img}" alt="" />
                     </div>
@@ -220,7 +220,7 @@
                         </div>
                     </div>
                     <div class="product-price">
-                        <h3>${appleProducts[i].a_price}</h3>
+                        <h3>₹ ${appleProducts[i].a_price} /-</h3>
                         <p>Delivery by <b>2 PM, Tomorrow</b></p>
                         <span>No Cost EMI from ₹5,150/month</span>
                     </div>
@@ -241,6 +241,16 @@
 
         function redirectLogin(){
             window.location.href = `./login.html`;
+        }
+
+        function redirectToCart(){
+            window.location.href = `./cart.html`;
+        }
+
+        function redirectToSinglePage(apple_product){
+            var apple_singleProduct = JSON.stringify(apple_product);
+            localStorage.setItem("apple_current_product", apple_singleProduct);
+            window.location.href = `singleProduct.html`;
         }
 
     </script>
